# qwen3-tts-fast-serve

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark_rtf.py  concurrent_benchmark.py  eval_utmos.py  main.py  preprocess_refs.py  pyproject.toml  server.py
examples/: client.py  gradio_voice_design.py  quick_benchmark.py  server.py  test_interface_zmq.py  voice_clone_example.py  voice_design_example.py
qwen3_tts_engine/: __init__.py  batched_engine.py  config.py  interface.py  llm.py  sampling_params.py
qwen3_tts_engine/engine/: block_manager.py  scheduler.py  sequence.py
qwen3_tts_engine/engine/llm_engine/: base.py  predictor_llm_engine.py  talker_llm_engine.py
qwen3_tts_engine/engine/model_runner/: base.py  predictor_model_runner.py  talker_mode_runner.py
qwen3_tts_engine/layers/: attention.py  embed_head.py  rotary_embedding.py  sampler.py
qwen3_tts_engine/utils/: context.py
qwen3_tts_engine/zmq/: __init__.py  dispatcher.py  engine_loop.py  output_bridge.py
