[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-fast-serve"
version = "1.0.0"
description = "Optimized Qwen3-TTS serving engine with GPU optimizations and audio post-processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "qwen-tts>=0.0.5",
    "soundfile>=0.12.0",
    "torch>=2.1.0",
    "transformers>=4.57.3",
    "pyzmq>=27.1.0",
    "asyncio>=4.0.0",
    "xxhash>=3.6.0",
]

[tool.setuptools.package-dir]
"qwen3_tts_engine" = "qwen3_tts_engine"
